k8s/fastapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-api-service   # name of the service, must match the one used in deployment.yaml , ingress.yaml backend.service.name
  namespace: fraud-api
spec:
  selector:
    app: fraud-api   #  must match the labels used in deployment.yaml template.metadata.labels.app=fraud-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
